<resources>
    <string name="app_name">My Student Application</string>
    <string name="appname">My Student Application</string>
    <string name="create_account">Create New Profile</string>

    <string name="email">Email Address</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="enter_email">Email Address</string>
    <string name="department">Department</string>
    <string name="password">Password</string>
    <string name="enter_new_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="new_register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="exam_details">Exam Details</string>
    <string name="studentprofile">StudentProfile</string>
    <string name="result">Result</string>
    <string name="email_addresss">Email Addresss</string>
    <string name="REsult">Result</string>
    <string name="exam_Details">Exam Details</string>
    <string name="student_profile">Student Profile</string>
    <string name="profile">Profile</string>
    <string name="Exam_details">Exam Details</string>
    <string name="Result">Result</string>
    <string name="eXam_details">Exam Details</string>
    <string name="results">Results</string>
    <string name="create_exam_details">Create Exam Details</string>
    <string name="check_result">Check Result</string>
    <string name="register_for_exam">Register for Exam</string>
    <string name="register_for_your_exam">Register For Your Exam</string>
    <string name="touch_id">Touch ID</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>