<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExamRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="6dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_firstname_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/firstname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_firstname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_lastname_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/lastname"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_lastname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_new_email_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="@string/enter_email"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_enter_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_subjectOne_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Subject One"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_subjectOne__edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_SubjectTwo_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Subject Two"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_SubjectTwo_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_SubjectThree_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Subject Three"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_SubjectThree_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_SubjectFour_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Subject Four"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_SubjectFour_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/examReg_ExamDate_text_input"
            style="@style/Widget.MyStudentApplication.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:hint="Exam Date"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/examReg_ExamDate_edit_text"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                style="@style/Widget.MyStudentApplication.Button"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="Save"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:id="@+id/idLoading1PB"
            android:visibility="invisible"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"/>


    </LinearLayout>



</ScrollView>